// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"HowTo","steps":[{"@type":"HowToStep","text":"Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.To learn more, see Connect to MongoDB","name":"Connect to your deployment"},{"@type":"HowToStep","text":"Import data from CSV or JSON files into your MongoDB database.To learn more, see Import and Export Data","name":"Import your data"}],"name":"Connect to a MongoDB deployment hosted on MongoDB Atlas","image":"https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress"}
  </script>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  position: relative;
  gap: 33px;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-2:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-2:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  position: relative;
  min-height: 59px;
}

.emotion-7 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-7 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-10 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-10 {
    padding-bottom: 32px;
  }
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-13 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-13 strong,
.emotion-13 b {
  font-weight: 700;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15:focus,
.emotion-15:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-15:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-15:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          1
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <p
          class="emotion-13"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-13"
        >
          <a
            class="emotion-15"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          2
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <p
          class="emotion-13"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-13"
        >
          <a
            class="emotion-15"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  position: relative;
  gap: 33px;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-2:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-2:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  position: relative;
  min-height: 59px;
}

.emotion-7 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-7 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-10 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-10 {
    padding-bottom: 32px;
  }
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-13 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 32px;
  line-height: 40px;
  font-weight: 400;
  font-family: 'MongoDB Value Serif','Times New Roman',serif;
  color: #00684A;
  margin-top: 24px;
  margin-bottom: 8px;
  color: var(--heading-color-primary);
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-14 {
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-15 {
  color: #889397;
  vertical-align: middle;
  margin-top: -2px;
}

.emotion-16 {
  display: inline;
  left: 0;
  top: 0;
  margin-top: -85px;
  position: absolute;
  padding-bottom: 2px;
}

@media only screen and (max-width: 767px) {
  .emotion-16 {
    margin-top: -85px;
  }
}

.emotion-17 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-17 strong,
.emotion-17 b {
  font-weight: 700;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          1
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 1
            <a
              class="headerlink emotion-14"
              href="#step-1"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-1"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          2
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 2
            <a
              class="headerlink emotion-14"
              href="#step-2"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-2"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          3
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 3
            <a
              class="headerlink emotion-14"
              href="#step-3"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-3"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          4
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 4
            <a
              class="headerlink emotion-14"
              href="#step-4"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-4"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          5
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 5
            <a
              class="headerlink emotion-14"
              href="#step-5"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-5"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          6
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 6
            <a
              class="headerlink emotion-14"
              href="#step-6"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-6"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          7
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <section>
          <h1
            class="contains-headerlink emotion-13"
            weight="medium"
          >
            Step 7
            <a
              class="headerlink emotion-14"
              href="#step-7"
              title="Permalink to this heading"
            >
              <svg
                aria-label="Link Icon"
                class="emotion-15"
                fill="none"
                height="12"
                role="img"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                  fill="currentColor"
                />
                <path
                  d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="emotion-16"
                id="step-7"
              />
            </a>
          </h1>
          <p
            class="emotion-17"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

.emotion-2 {
  gap: 16px;
}

.emotion-2 h2,
.emotion-2 h4,
.emotion-2 h5,
.emotion-2 h6 {
  margin-top: unset;
}

.emotion-2 h3 {
  margin-top: 2px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  position: relative;
  min-height: 59px;
}

.emotion-7 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 section>*,
.emotion-10 ol p,
.emotion-10 ul p {
  margin-bottom: 16px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-13 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-13 strong,
.emotion-13 b {
  font-weight: 700;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-15:focus,
.emotion-15:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-15:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-15:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          1
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <p
          class="emotion-13"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-13"
        >
          <a
            class="emotion-15"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8 emotion-9"
        >
          2
        </div>
      </div>
      <div
        class="emotion-10 emotion-11 emotion-12"
      >
        <p
          class="emotion-13"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-13"
        >
          <a
            class="emotion-15"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
